--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^3.6.2",
+    "dotenv": "^16.3.1",
     "express": "^4.17.2",
     "graphql": "^16.3.0",
     "mongoose": "^7.0.2"
