--- a/server/package.json
+++ b/server/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "mern-server",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "npm": "server.js",
   "scripts": {
     "start": "node server.js",
     "watch": "nodemon",
-    "seed": "node seeders/seed.js"
+    "seed": "node seeds/seed.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-core": "^3.6.2",
     "apollo-server-express": "^3.6.2",
     "dotenv": "^16.3.1",
     "express": "^4.17.2",
     "graphql": "^16.3.0",
+    "http": "^0.0.1-security",
     "mongoose": "^7.0.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.3"
   }
 }
