--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "server",
+  "name": "mern-server",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "npm": "server.js",
+  "npm" : "server.js",
   "scripts": {
     "start": "node server.js",
     "watch": "nodemon",
-    "seed": "node seeds/seed.js"
+    "seed": "node seeders/seed.js"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,6 @@
   "dependencies": {
     "apollo-server-core": "^3.6.2",
     "apollo-server-express": "^3.6.2",
-    "dotenv": "^16.3.1",
     "express": "^4.17.2",
     "graphql": "^16.3.0",
     "http": "^0.0.1-security",
