--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "npm" : "server.js",
+  "npm": "server.js",
   "scripts": {
     "start": "node server.js",
     "watch": "nodemon",
@@ -15,9 +15,11 @@
   "dependencies": {
     "apollo-server-core": "^3.6.2",
     "apollo-server-express": "^3.6.2",
+    "bcrypt": "^5.1.1",
     "express": "^4.17.2",
     "graphql": "^16.3.0",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.0.2"
   }
 }
